[package]
name = "proto-http-1"
version = "0.1.0"
edition = "2021"

[features]
# Data types of HTTP 1.1
data = []
# Client layer for HTTP 1.1
client = ["data"]
# Server layer for HTTP 1.1
server = ["data"]


[dependencies]
http = "1.2.0"
tokio = { version = "1.43.0", features = ["io-util", "time"] }
tower = { version = "0.5.2" }
parser-helper = { git = "https://github.com/rapidrecast/parser-helper.git", branch = "main" }
proto-tower-util = { path = "../proto-tower-util" }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util"] }
