[package]
name = "proto-http-2"
version = "0.1.0"
edition = "2021"

[features]
data = []
client = ["data"]
server = ["data"]

[dependencies]
tower = "0.5.2"
tokio = { version = "1.43.0", features = ["io-util", "time", "sync"] }
parser-helper = { git = "https://github.com/rapidrecast/parser-helper.git", branch = "main" }
proto-tower-util = { path = "../proto-tower-util" }
async-trait = "0.1.85"
