[package]
name = "proto-tower-http-1"
version = "0.1.3"
edition = "2021"
authors = [
    "RapidRecast <hugh@rapidrecast.io>",
]
description = "Tower implementation of the HTTP/1.1 protocol"
license = "GPL-3.0-only"

[features]
# Data types of HTTP 1.1
data = []
# Client layer for HTTP 1.1
client = ["data"]
# Server layer for HTTP 1.1
server = ["data"]


[dependencies]
http = "1.2.0"
tokio = { version = "1.43.0", features = ["io-util", "time"] }
tower = { version = "0.5.2" }
parser-helper = { git = "https://github.com/rapidrecast/parser-helper.git", tag = "v0.1.0" }
proto-tower-util = { git = "https://github.com/rapidrecast/proto-tower.git", branch = "main" }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util"] }
