[package]
name = "proto-tower-http-2"
version = "0.1.2"
edition = "2021"
authors = [
    "RapidRecast <hugh@rapidrecast.io>",
]
description = "Tower implementation of the HTTP/2 protocol"
license = "GPL-3.0-only"


[features]
data = []
client = ["data"]
server = ["data"]

[dependencies]
tower = "0.5.2"
tokio = { version = "1.43.0", features = ["io-util", "time", "sync"] }
parser-helper = { git = "https://github.com/rapidrecast/parser-helper.git", branch = "main" }
proto-tower-util = { git = "https://github.com/rapidrecast/proto-tower.git", branch = "main" }
async-trait = "0.1.85"
