[package]
name = "proto-tower-http-2"
version = "0.1.4"
edition = "2021"
authors = [
    "RapidRecast <hugh@rapidrecast.io>",
]
description = "Tower implementation of the HTTP/2 protocol"
license = "GPL-3.0-only"


[features]
data = []
client = ["data"]
server = ["data"]

[dependencies]
tower = "0.5.2"
tokio = { version = "1.43.0", features = ["io-util", "time", "sync"] }
parser-helper = { version = "0.1.0", git = "https://github.com/rapidrecast/parser-helper.git", tag = "v0.1.0" }
proto-tower-util = { version = "0.1.4", git = "https://github.com/rapidrecast/proto-tower.git", branch = "main" }
async-trait = "0.1.85"
