[package]
name = "proto-tower-kafka"
version = "0.1.6"
edition = "2021"
authors = [
    "RapidRecast <hugh@rapidrecast.io>",
]
description = "Tower implementation of the Kafka protocol"
license = "GPL-3.0-only"

[features]
data = []
client = ["data"]
server = ["data"]

[dependencies]
tower = "0.5.2"
tokio = { version = "1.43.0", features = ["io-util", "time", "sync", "net"] }
parser-helper = "0.1.0"
proto-tower-util = { version = "0.1.6", path = "../proto-tower-util" }
async-trait = "0.1.85"
bytes = "1.9.0"
#kafka-protocol = { version = "0.14.0" }
kafka-protocol = { git = "https://github.com/phughk/kafka-protocol-rs", branch = "107-conflicting-implicit-trait-impl" }
paste = "1.0.15"
uuid = "1.12.1"

[dev-dependencies]
rdkafka = "0.37.0"
