[package]
name = "proto-tower-util"
version = "0.1.2"
edition = "2021"
authors = [
    "RapidRecast <hugh@rapidrecast.io>",
]
description = "Helper tools for Tower protocol implementations"
license = "GPL-3.0-only"


[dependencies]
tokio = { version = "1.43.0", features = ["io-util", "time", "macros", "rt"] }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
